<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item android:title="@string/general_functions">
        <menu>
            <item
                android:title="@string/arithmetic"
                android:icon="@android:drawable/ic_menu_send"/>
        </menu>
    </item>
    <item android:title="@string/statistics">
        <menu>
            <item
                android:title="@string/statistics"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/std_deviation"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/population_std_deviation"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/z_score"
                android:icon="@android:drawable/ic_menu_send" />
            <item
                android:title="@string/one_sample_zscore"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/two_sample_zscore"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/two_sample_zinterval"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/t_score"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/one_sample_tscore"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/two_sample_tscore"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/confidence_interval"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/std_error"
                android:icon="@android:drawable/ic_menu_send"/>

            <item
                android:title="@string/chisquare"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/spread_of_two_proportions"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/tcdf"
                android:icon="@android:drawable/ic_menu_send"/>
        </menu>
    </item>
    <item android:title="@string/probability">
        <menu>
            <item android:title="@string/combination"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/permutation"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/binomial_probability"
                android:icon="@android:drawable/ic_menu_send" />
            <item
                android:title="@string/geometric_probability"
                android:icon="@android:drawable/ic_menu_send" />
        </menu>
    </item>
    <item android:title="@string/shapes">
        <menu>
            <item
                android:title="@string/cylinder"
                android:icon="@android:drawable/ic_menu_send" />
            <item
                android:title="@string/cone"
                android:icon="@android:drawable/ic_menu_send" />
            <item
                android:title="@string/sphere"
                android:icon="@android:drawable/ic_menu_send" />
        </menu>
    </item>

    <item android:title="@string/trig">
        <menu>
            <item
                android:title="@string/sine_cosine_tangent"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/arc_sine_cosine_tangent"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/degrees_radians"
                android:icon="@android:drawable/ic_menu_send"/>

        </menu>
    </item>

    <item android:title="@string/newton_stuff">
        <menu>
            <item
                android:title="@string/net_force"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/gravitation_force"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/mass_of_object"
                android:icon="@android:drawable/ic_menu_send"/>
            <item
                android:title="@string/distance_between_objects"
                android:icon="@android:drawable/ic_menu_send"/>

        </menu>
    </item>
    <item android:title="@string/other_formulas">
        <menu>
            <item
                android:title="@string/quadratic_formula"
                android:icon="@android:drawable/ic_menu_send"/>

        </menu>
    </item>
</menu>
